add last updated ordering to admin

--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -92,6 +92,10 @@ jQuery(document).ready(function() {
             display: "Created date"
           },
           {
+            field: "last_updated.exact",
+            display: "Last updated date"
+          },
+          {
             field: "last_name",
             display: "Last name"
           },
