--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -63,7 +63,7 @@ jQuery(document).ready(function() {
                 		<td><input type="checkbox" name="early_application"> Early application</td>
                     </tr>
         	        <tr>
-	                    <td><input type="checkbox" name="ucas_number"> UCAS number</td>
+	                    <td><input type="checkbox" name="scn_number"> SCN <input type="checkbox" name="ucas_number"> UCAS</td>
 	                    <td><input type="checkbox" name="local_authority"> Local authority</td>
 	                    <td><input type="checkbox" name="experience"> Experience</td>
                 		<td><input type="checkbox" name="looked_after_child"> Looked after child</td>
@@ -160,6 +160,13 @@ jQuery(document).ready(function() {
 	                    <td></td>
 	                    <td></td>
 	                    <td><input type="checkbox" name="simd40"> SIMD 40</td>
+                    </tr>
+
+        	        <tr>
+	                    <td></td>
+	                    <td></td>
+	                    <td></td>
+	                    <td><input type="checkbox" name="leaps_notes"> LEAPS notes</td>
                     </tr>
 
                 </tbody>
