--- a/portality/templates/leaps/survey/intro.html
+++ b/portality/templates/leaps/survey/intro.html
@@ -7,7 +7,7 @@
 
 		        <p>This survey contains seven pages. You must complete every page in order to successfully save your responses. It should take no more than 30 minutes to complete.</p>
 		        <p>Please have details of your qualifications, relevant experience and possible University or College applications to hand before you start this survey.</p>
-		        <p><strong>DO NOT CLOSE YOUR BROWSER WHILST COMPLETING THE SURVEY &mdash; YOU MUST COMPLETE THE SURVEY IN ONE SITTING.</strong></p>
+		        <p><strong>Do not close your browser whilst completing the survey.</strong></p>
 		        <p>Only the students of <strong>participating schools</strong> can complete the survey. Schools are listed on the next page.</p>
 		        <p>Each section presents <strong>instructions at the top of the page</strong> on how to complete the questions in that section.</p> 
 		        <p>Subject fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
