--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div id="logo">
-		<img src="/static/leaps_people.jpg" alt="Lothians Equal Access Programme for Schools" title="Lothians Equal Access Programme for Schools" />
+		<img src="/static/leaps_people.jpg" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
 	</div>
 
       <div class="row-fluid">
@@ -14,7 +14,10 @@
 	
 	        <p>Support for the UCAS process begins with eligible students completing our <a class="inline" href="/survey">online survey form</a>. 
 	        Providing as much detail as possible at this stage increases the benefit of any forthcoming face to 
-	        face interview. All data is collected and stored securely, and used only in accordance with our 
+	        face interview. To find out more about what your LEAPS interview will involve, have a look at the 
+	        <a href=" https://leapsonline.org/schoolstudents/s6-blog/leaps-11-interview">LEAPS S6 - Blog</a></p>
+	        
+	        <p>All data is collected and stored securely, and used only in accordance with our 
 	        <a class="inline" href="/policy">data policy</a>.</p>
         </div>
 
