--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -27,6 +27,7 @@ jQuery(document).ready(function() {
         maxDate: '-12y'
     };
     $('.dobdatepicker').datepicker(dobopts);
+    
     var dobformat = function(event) {
         event.preventDefault();
         var datestring = $('#date_of_birth').val();
@@ -40,7 +41,43 @@ jQuery(document).ready(function() {
         }
     }
     $('.checkdob').bind('change',dobformat);
-    
+    var postcodeformat = function(event) {
+        event.preventDefault();
+        var str = $('#post_code').val().toLowerCase().replace(/ /g,'');
+        var letters = 'abcdefghijklmnopqrstuvwxyz';
+        if ( str.length < 5 || str.length > 8 || letters.indexOf(str[0]) === -1 || letters.indexOf(str[str.length-1]) === -1 || '0123456789'.indexOf(str[2]) === -1) {
+            $('.postcodewarning').show();
+            $('#post_code').removeClass('parsley-success').removeClass('parsley-validated').addClass('parsley-error');
+        } else {
+            $('.postcodewarning').hide();
+            $('#post_code').removeClass('parsley-error').addClass('parsley-validated').addClass('parsley-success');
+        }
+    }
+    $('.checkpostcode').bind('change',postcodeformat);
+    var mobileformat = function(event) {
+        event.preventDefault();
+        var str = $('#mobile_phone').val();
+        if (str.length === 0) {
+            $('.mobilewarning').hide();
+            $('#mobile_phone').removeClass('parsley-error').removeClass('parsley-validated').removeClass('parsley-success');
+        } else {
+            try {
+                var n = parseInt(str);
+                if (str.length === 11) {
+                    $('.mobilewarning').hide();
+                    $('#mobile_phone').removeClass('parsley-error').addClass('parsley-success');
+                } else {
+                    $('.mobilewarning').show();
+                    $('#mobile_phone').removeClass('parsley-success').addClass('parsley-error');
+                }
+            } catch(err) {
+                $('.mobilewarning').show();
+                $('#mobile_phone').removeClass('parsley-success').addClass('parsley-error');
+            }
+        }
+    }
+    $('.checkmobile').bind('change',mobileformat);
+
     $('.select2this').select2({width:'100%'});
     $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#F2DEDE'}) });
     $('.select2thisRequired').on('select2:select', function() { $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#DFF0D8'}) }); });
@@ -67,7 +104,7 @@ jQuery(document).ready(function() {
         event.preventDefault();
         $('#activealert').hide();
         $('.part').show();
-        $("html, body").animate({ scrollTop: 0 }, "fast");
+        $("html, body").animate({ scrollTop: $('.part.student').offset().top }, "fast");
     }
     $('.review').bind('click',showall);
 
@@ -283,6 +320,19 @@ textarea {
     color:#666;
     font-size:1.1em;
 }
+.btn {
+    color:#333;
+}
+.btn-success {
+    color:#333;
+}
+.btn-info {
+    color:#333;
+}
+.btn-warning {
+    color:#333;
+}
+
 /*.add-row, .delete-row {
     padding-left:3px;
     padding-right:3px;
@@ -328,14 +378,14 @@ input.bigfield{
             When you are ready to begin the survey, please read the notes below.</p>
 	        <p>This survey contains six parts. You must complete every part in order to successfully save your responses. It should take no more than 30 minutes to complete, if you prepare in advance. Please have details of your qualifications, personal interests, work experience, and possible University or College applications to hand before you start this survey.</p>
 			<p>It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
-			<p><strong>DO NOT CLOSE YOUR BROWSER WHILST COMPLETING THE SURVEY.</strong></p>
+			<p><strong>Do not close your browser whilst completing the survey.</strong></p>
 	        <p>Only the students of <strong>participating schools</strong> can complete the survey.</p>
 	        <p>Each part presents <strong>instructions at the top</strong> on how to complete the questions in that part.</p> 
 	        <p>Some fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
 	        continue to type and your text will be accepted.</p>
 	        <p>If you need to <strong>insert extra rows</strong>, press <strong>add</strong> to get another row.</p>
 	        <p>If you want to <strong>delete a row</strong>, press <strong>delete</strong> to remove the row.</p>
-	        <p>Required inputs are shown in red, until they are completed appropriately, when they will become green. You should check that all required inputs are green before proceeding. Inputs that are optional remain white.</p>
+	        <p>Required inputs have an asterisk and are shown in red, until they are completed appropriately, when they will become green. You should check that all required inputs are green before proceeding. Inputs that are optional remain white.</p>
 	        <p>You can navigate between parts using the <strong>Previous</strong> or <strong>Next</strong> buttons.</p>
 	        <p>At the end of the form you will be directed to review your responses and you will not be able to submit until all the required questions have been answered.</p>
         </div>
@@ -361,7 +411,7 @@ input.bigfield{
 	    <div class="col-md-5">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>First name</p>
+                    <p>First name *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input class="form-control" type="text" name="first_name" data-required="true"></p>
@@ -371,7 +421,7 @@ input.bigfield{
 	    <div class="col-md-5 col-md-offset-2">		
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>Last name</p>
+                    <p>Last name *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input class="form-control" type="text" name="last_name" data-required="true"></p>
@@ -384,7 +434,7 @@ input.bigfield{
 	    <div class="col-md-5">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>Date of birth</p>
+                    <p>Date of birth *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input type="text" class="form-control dobdatepicker checkdob" id="date_of_birth" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"></p>
@@ -395,10 +445,10 @@ input.bigfield{
 	    <div class="col-md-5 col-md-offset-2">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>UCAS number</p>
+                    <p>SCN number</p>
 	            </div>
 	            <div class="col-md-9">
-            		<p><input class="form-control" type="text" name="ucas_number"></p>
+            		<p><input class="form-control" type="text" name="scn_number"></p>
 	            </div>
 	        </div>
         </div>
@@ -408,7 +458,7 @@ input.bigfield{
 	    <div class="col-md-5">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>School</p>
+                    <p>School *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><select class="select2this select2thisRequired" name="school" data-required="true">
@@ -436,7 +486,7 @@ input.bigfield{
 	    <div class="col-md-5">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>Year group</p>
+                    <p>Year group *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><select class="form-control" name="year" data-required="true">
@@ -453,7 +503,7 @@ input.bigfield{
 	    <div class="col-md-5 col-md-offset-2">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>Gender</p>
+                    <p>Gender *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p>
@@ -492,7 +542,8 @@ input.bigfield{
                     <p>Mobile phone</p>
 	            </div>
 	            <div class="col-md-9">
-            		<p><input class="form-control" type="text" name="mobile_phone"></p>
+            		<p><input class="form-control checkmobile" type="text" name="mobile_phone"></p>
+            		<p class="mobilewarning" style="color:red;font-size:0.8em;margin-bottom:10px;display:none;">For UK mobile numbers please enter in format starting 07, no +44, no spaces, 11 digits. Thank you.</p>
 	            </div>
 	        </div>
         </div>
@@ -502,7 +553,7 @@ input.bigfield{
 	    <div class="col-md-5">		
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>Address</p>
+                    <p>Address *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input class="form-control" type="text" name="address_line_1" data-required="true"></p>
@@ -525,7 +576,7 @@ input.bigfield{
 	    <div class="col-md-5">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>City</p>
+                    <p>City *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input class="form-control" type="text" name="city" data-required="true"></p>
@@ -551,14 +602,15 @@ input.bigfield{
                     <p>Post code</p>
 	            </div>
 	            <div class="col-md-9">
-            		<p><input class="form-control" type="text" name="post_code" data-required="true"></p>
+            		<p><input class="form-control checkpostcode" type="text" name="post_code" data-required="true"></p>
+            		<p class="postcodewarning" style="color:red;font-size:0.8em;margin-bottom:10px;display:none;">Please enter a valid UK post code</p>
 	            </div>
 	        </div>
         </div>
 	    <div class="col-md-5 col-md-offset-2">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>Email address</p>
+                    <p>Email address *</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input class="form-control" type="text" name="email" data-type="email" data-required="true" data-trigger="keyup focusout"></p>
@@ -729,7 +781,11 @@ input.bigfield{
 	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Potential Applications</h2>
-	            <p><strong>Part 3 of 6</strong> - please list any applications for further or higher education that you are thinking of making. Use one row per application, up to the maximum of 6. If you have not made any decisions yet, please feel free to leave this section blank.</p>
+	            <p><strong>Part 3 of 6</strong> - please list any applications for further or higher education that you are 
+	            thinking of making. Use one row per application, up to the maximum of 6. If you have not made any decisions yet, 
+	            please feel free to leave this section blank. The more information you add to this section, the more detailed 
+	            your interview will be. Even if you have lots of different ideas, putting examples of some of them in this 
+	            section will help us to advise you better.</p>
 	        </div>
 	    </div>
 	</div>
@@ -823,7 +879,7 @@ input.bigfield{
 	        <div class="well">
 	            <h2>Work and other experience</h2>
 	            <p><strong>Part 5 of 6</strong> - please give short details of any work or voluntary experience you have had e.g. 
-								paid employment, school committees, Pathways to Professions events etc and they can be discussed further at 
+								paid employment, school committees, Access to the Professions events etc and they can be discussed further at 
 								your interview. It is recommended that you write your own copy of interests, achievements and work experience 
 								in a document elsewhere, then insert them into this form. You will find the document useful for your personal 
 								statement in your UCAS application. Remember - you won't be able to return to this form! 
@@ -869,14 +925,15 @@ input.bigfield{
 	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Additional academic and career information</h2>
-	            <p><strong>Part 6 of 6</strong> - please provide information about any other factors that affected your academic achievements, and provide some details on your career goals and any plans you have made towards them.</p>
+	            <p><strong>Part 6 of 6</strong> - please provide information about any other factors that affected your 
+	            academic achievements, and provide some details on your career goals and any other post school ideas that you have had.</p>
 	        </div>
 	    </div>
 	</div>
 
 	<div class="row">
 	    <div class="col-md-4">
-            <p>Please describe any career plans you may have</p>
+            <p>Please describe any career or post school plans that you may have</p>
 	    </div>
 	    <div class="col-md-8">
             <p><textarea class="form-control" name="career_plans"></textarea></p>
@@ -895,7 +952,8 @@ input.bigfield{
 	<div class="row">
 	    <div class="col-md-4">
             <p>If you feel your academic performance has been affected at any time in school, 
-			please tell us about it here e.g. a period of absence from school, time spent in care, health issues, caring responsibilities, bereavement. (At your 
+			please tell us about it here e.g. a period of absence from school, time spent in care, estrangement, 
+			health issues, caring responsibilities, bereavement. (At your 
 			LEAPS interview, we may discuss if this would be relevant to share with university admissions tutors.)</p>
 	    </div>
 	    <div class="col-md-8">
