--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1123,13 +1123,13 @@ fieldset{
 	        <table>
                 <thead>
                     <tr>
-                        <th style="min-width:45%;"><br>LEAPS internal notes (only visible here):</th>
-                        <th style="min-width:45%;"><br>Additional comments (will show on PDFs and PAEs):</th>
+                        <th style="min-width:400px;"><br>LEAPS internal notes (only visible here):</th>
+                        <th><br>Additional comments (will show on PDFs and PAEs):</th>
                     </tr>
                 </thead>
 	            <tbody>
         	        <tr>
-                        <td style="min-width:45%;">
+                        <td>
                     		<textarea class="bigfield" name="leaps_notes" placeholder="LEAPS internal notes">{% if record %}{{record.data.leaps_notes}}{% endif %}</textarea>
                         </td>
                 		<td>
