update for pae notes button

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -542,7 +542,7 @@ input.bigfield{
                     <p>Mobile phone</p>
 	            </div>
 	            <div class="col-md-9">
-            		<p><input class="form-control checkmobile" type="text" name="mobile_phone"></p>
+            		<p><input class="form-control checkmobile" type="text" name="mobile_phone" id="mobile_phone"></p>
             		<p class="mobilewarning" style="color:red;font-size:0.8em;margin-bottom:10px;display:none;">For UK mobile numbers please enter in format starting 07, no +44, no spaces, 11 digits. Thank you.</p>
 	            </div>
 	        </div>
@@ -602,7 +602,7 @@ input.bigfield{
                     <p>Post code</p>
 	            </div>
 	            <div class="col-md-9">
-            		<p><input class="form-control checkpostcode" type="text" name="post_code" data-required="true"></p>
+            		<p><input class="form-control checkpostcode" type="text" name="post_code" id="post_code" data-required="true"></p>
             		<p class="postcodewarning" style="color:red;font-size:0.8em;margin-bottom:10px;display:none;">Please enter a valid UK post code</p>
 	            </div>
 	        </div>
