changes for pae notes

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -445,7 +445,7 @@ input.bigfield{
 	    <div class="col-md-5 col-md-offset-2">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>SCN number</p>
+                    <p>Scottish Candidate Number (SCN)</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input class="form-control" type="text" name="scn_number"></p>
@@ -563,7 +563,7 @@ input.bigfield{
 	    <div class="col-md-5 col-md-offset-2">
 	        <div class="row">
 	            <div class="col-md-3">
-                    <p>...</p>
+                    <p>Address line 2</p>
 	            </div>
 	            <div class="col-md-9">
             		<p><input class="form-control" type="text" name="address_line_2"></p>
