test for uni exports

--- a/portality/templates/leaps/universities/pae.html
+++ b/portality/templates/leaps/universities/pae.html
@@ -81,7 +81,9 @@ jQuery(document).ready(function() {
                 </tr>
                 {% if student.scn_number %}
                 <tr>
-                    <td class="title">Candidate No.</td> <td>{{ student.scn_number }})</td>
+                    <td class="title">Candidate No.</td> <td>{{ student.scn_number }}</td>
+                    <td></td> <td></td>
+                    <td></td> <td></td>
                 </tr>
                 {% endif %}
             </table>
