--- a/portality/templates/leaps/universities/index.html
+++ b/portality/templates/leaps/universities/index.html
@@ -8,13 +8,22 @@ jQuery(document).ready(function() {
         "sortList": [[5,1]],
         "headers":{7:{"sorter":false}}
     }); 
+
+    function makeid(length) {
+        var result = '';
+        var characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+        var charactersLength = characters.length;
+        for ( var i = 0; i < length; i++ ) result += characters.charAt(Math.floor(Math.random() * charactersLength));
+        return result;
+    }
+    $('#export').attr('href', $('#export').attr('href') + ($('#export').attr('href').indexOf('?') === -1 ? '?' : '&') + makeid(6) + '=' + makeid(6));
 }); 
 </script>
 
     <div class="row-fluid">
         <div class="span12">
             <p style="text-align:right;">
-                <a class="btn btn-primary" href="/universities/export{% if current_user.view_admin and current_user.is_institution != True %}?institution={{current_user.is_institution}}{% endif %}">Export PAEs</a>
+                <a id="export" class="btn btn-primary" href="/universities/export{% if current_user.view_admin and current_user.is_institution != True %}?institution={{current_user.is_institution}}{% endif %}">Export PAEs</a>
                 {% if current_user.is_institution in ['University of Edinburgh','Edinburgh Napier University','Heriot-Watt University','Queen Margaret University','SRUC- Scotlands Rural College'] %}<a class="btn btn-info" href="/universities/subjects">Manage subjects</a>{% endif %}
                 <a class="btn" href="/account/logout">Logout</a>
             </p>
